--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <input class="form-control" placeholder="Chatta här!" autofocus>
 <pre></pre>
 
-<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-<script src="script.js"></script>
+<script src="client.js"></script>
 </body>
 </html>
